# kura

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_ja.md  RELEASE.md  SECURITY.md  docker-compose.test.yml  justfile  screens.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  sync-legal-to-pages.yml
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/rust-jni/: Cargo.toml
android/rust-jni/src/: lib.rs
assets/icons/: convert2png.sh
assets/legal/: terms_en.md  terms_ja.md
assets/store/firefox/: description_en.md  description_ja.md
desktop/: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
desktop/scripts/: sync-version.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.dev.json  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: entries.rs  export.rs  import.rs  labels.rs  mod.rs  security.rs  session.rs  storage.rs  sync.rs  utils.rs
desktop/src-tauri/src/storage/: s3.rs
desktop/src-tauri/tests/: integration_test.rs
desktop/src/__tests__/: onboarding.test.tsx  setup.ts
desktop/src/assets/: legal
desktop/src/commands/: index.ts
desktop/src/components/: ConfirmDialog.tsx  Sidebar.tsx  TotpDisplay.tsx
desktop/src/contexts/: ErrorContext.tsx  SyncContext.tsx
desktop/src/hooks/: useTerms.ts
desktop/src/i18n/: index.ts  types.ts
desktop/src/lib/: clipboard.ts
desktop/src/shared/: ThemeContext.tsx  constants.ts  storage.ts  types.ts
docs/: android-autofill.md  android-autofillservice.md  architecture.md  extension-autofill-testing.md  extension-autofill.md  extension-pattern-db.md  i18n.md  import-1pux.md  publish-amo.md  security.md  sync-algorithm.md  testing-strategy.md  ui-guidelines.md  webauthn-passkey.md
extension/: .gitignore  .npmrc  DIRECTORY_STRUCTURE.txt  IMPLEMENTATION.md  Makefile  NEXT_PHASE.md  README_QUICKSTART.md  SUMMARY.md  amo-metadata.json  biome.json  manifest.firefox.json  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.firefox.ts  vite.config.ts  vitest.config.ts
extension/_locales/en/: messages.json
extension/_locales/ja/: messages.json
extension/patterns/: schema.json
extension/patterns/sites/: benefit401k.com.json  iijmio.jp.json  sakura.ad.jp.json
extension/scripts/: generate-etld.ts  generate-patterns.ts  sign-or-download-firefox.ts  source-bundle.ts  sync-version.ts  update-psl.ts
extension/src/__tests__/: autofill-handler.test.ts  etld.test.ts  field-classifier.test.ts  form-detector.test.ts  generate-patterns.test.ts  onboarding.test.tsx  pattern-detector.test.ts  pattern-matcher.test.ts  setup.ts
extension/src/background/: autofill.ts  index.ts  offscreen.html  offscreen.ts  wasm-init.ts
extension/src/content/: capture.css  capture.ts  debug-collector.ts  dev-mode-bridge.ts  dropdown.css  dropdown.ts  field-classifier.ts  filler.ts  form-detector.ts  main.ts  messaging.ts  pattern-detector.ts  pattern-matcher.ts
extension/src/popup/: App.tsx  index.css  index.html  main.tsx
extension/src/shared/: constants.ts  dev-mode-types.ts  dev-mode.ts  etld.ts  messages.ts  pattern-types.ts  s3-client.ts  storage.ts  types.ts
extension/src/vault/: index.ts  types.ts
extension/test-pages/: index.html  server.ts
extension/test-pages/fixtures/: transfer-config.txt  vault.json
extension/test-pages/pages/: autocomplete-attrs.html  capture-mode.html  credit-card.html  hidden-fields.html  http-warning.html  iframe-login-inner.html  iframe-login.html  login-formless.html  login-japanese.html  login-react.html  login-split-password.html  login-split-username.html  login-standard.html  multiple-forms.html  nested-inputs.html  password-change.html  (+6 more)
extension/wasm-bridge/: Cargo.toml
extension/wasm-bridge/src/: lib.rs
extension/wasm-bridge/src/storage/: mod.rs  s3_sigv4.rs  s3_wasm.rs
mobile/: analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
mobile/lib/: app.dart  main.dart
mobile/test/: widget_test.dart
scripts/: sync-version.mjs
vault-core/: Cargo.toml
vault-core/src/: api.rs  codec.rs  config.rs  error.rs  frb_generated.rs  lib.rs  password_gen.rs  raw_json_serde.rs  secret.rs  storage.rs  store.rs  totp.rs  vault.rs  wasm_api.rs
vault-core/src/api/: entries.rs  export.rs  import.rs  labels.rs  mod.rs  security.rs  session.rs  sync.rs  transfer.rs  utils.rs
vault-core/src/crypto/: config.rs  dek.rs  encryption.rs  kdf.rs  mod.rs  recovery.rs  transfer.rs
vault-core/src/export/: mod.rs
vault-core/src/export/bitwarden/: mapper.rs  mod.rs  types.rs
vault-core/src/import/: duplicate.rs  mod.rs  preview.rs
vault-core/src/import/onepux/: mapper.rs  mod.rs  parser.rs  types.rs
vault-core/src/models/: argon2_params.rs  entry.rs  entry_data.rs  label.rs  mod.rs  typed_value.rs  vault_meta.rs
vault-core/src/storage/: local.rs  mod.rs  s3.rs  s3_sigv4.rs  s3_wasm.rs  wasm.rs
vault-core/src/sync/: conflict.rs  engine.rs  mod.rs
vault-core/src/vault/: entries.rs  export.rs  labels.rs  locked.rs  mod.rs  security.rs  state.rs
vault-core/tests/: generate_test_vault.rs  integration_test.rs
(+261 files in other folders)
