[package]
name = "vault_core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0"
argon2 = "0"
rand = "0"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
thiserror = "2"
chrono = { version = "0", features = ["serde", "wasmbind"] }
base32 = "0"
base64 = "0"
log = "0"
async-trait = "0"
sha2 = "0"
hmac = "0"
totp-rs = "5"
getrandom = { version = "0", features = ["js"] }  # WASM-compatible random
once_cell = "1"

[features]
default = []
desktop = []
android = []

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
