[package]
name = "vault_core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
base32 = "0.5"
base64 = "0.22"
log = "0.4"
async-trait = "0.1"
sha2 = "0.10"
hmac = "0.12"
totp-rs = "5"
getrandom = { version = "0.2", features = ["js"] }  # WASM-compatible random
once_cell = "1"

[features]
default = []
desktop = []
android = []

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
