[package]
name = "vault_core"
version = "0.1.9"
edition = "2021"
description = "Core library for kura, a serverless password manager with client-side encryption"
authors = ["Daisuke Muraoka <daisuke.muraoka.jp@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/muranoya/kura"
homepage = "https://github.com/muranoya/kura"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
base32 = "0.5"
base64 = "0.22"
log = "0.4"
async-trait = "0.1"
sha2 = "0.10"
hmac = "0.12"
totp-rs = "5"
getrandom = { version = "0.2", features = ["js"] }  # WASM-compatible random
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = []
desktop = []
android = []
wasm = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
