[package]
name = "kura-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "kura_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
vault_core = { path = "../../vault-core", features = ["desktop"] }
aws-sdk-s3 = "1"
aws-config = "1"
async-trait = "0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
