[package]
name = "wasm-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vault_core = { path = "../../vault-core", default-features = false }
wasm-bindgen = "0"
wasm-bindgen-futures = "0"
js-sys = "0"
web-sys = { version = "0", features = ["Window", "Headers", "Request", "Response", "RequestInit", "RequestMode", "AbortController", "AbortSignal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
console_error_panic_hook = "0"
async-trait = "0"
chrono = { version = "0", features = ["wasmbind"] }
sha2 = "0"
hmac = "0"
rand = "0"
