[package]
name = "wasm-bridge"
version = "0.1.9"
edition = "2021"
description = "WebAssembly bridge exposing vault-core to the kura browser extension"
authors = ["Daisuke Muraoka <daisuke.muraoka.jp@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/muranoya/kura"
homepage = "https://github.com/muranoya/kura"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vault_core = { path = "../../vault-core", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"
console_error_panic_hook = "0.1"
